Modified the NAV bar at the top to a fixed position - now when i scroll the nav scrolls with me - also added margin on top of header to avoid clipping with the nav

--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -8,6 +8,9 @@ nav {
   background: linear-gradient(#8c99c6, #4056A1 );
   color: #FFFF;
   padding: 1.5em;
+  position: fixed;
+  top: 0;
+  width: 100%;
 }
 
 #logo {
